# distributedhardware_distributed_audio

./: AGENTS.md  CODEOWNERS  README_zh.md  bundle.json  distributedaudio.gni  hisysevent.yaml
.gitee/: PULL_REQUEST_TEMPLATE.zh-CN.md
audiohandler/: BUILD.gn
audiohandler/include/: daudio_handler.h  ihardware_handler.h
audiohandler/src/: daudio_handler.cpp
audiohandler/test/unittest/: BUILD.gn
audiohandler/test/unittest/include/: daudio_handler_test.h
audiohandler/test/unittest/src/: daudio_handler_test.cpp
common/dfx_utils/test/unittest/: BUILD.gn
common/dfx_utils/test/unittest/include/: daudio_hitrace_test.h
common/dfx_utils/test/unittest/src/: daudio_hidumper_test.cpp  daudio_hitrace_test.cpp  daudio_radar_test.cpp
common/test/unittest/: BUILD.gn
common/test/unittest/include/: daudio_utils_test.h
common/test/unittest/src/: daudio_utils_test.cpp
common/test_utils/: BUILD.gn
interfaces/inner_kits/native_cpp/audio_sink/: BUILD.gn
interfaces/inner_kits/native_cpp/audio_sink/include/: daudio_sink_handler.h  daudio_sink_ipc_callback.h  daudio_sink_ipc_callback_stub.h  daudio_sink_proxy.h  idaudio_sink.h  idaudio_sink_ipc_callback.h  idistributed_hardware_sink.h
interfaces/inner_kits/native_cpp/audio_sink/src/: daudio_sink_handler.cpp  daudio_sink_ipc_callback.cpp  daudio_sink_ipc_callback_stub.cpp  daudio_sink_load_callback.cpp  daudio_sink_proxy.cpp
interfaces/inner_kits/native_cpp/audio_source/: BUILD.gn
interfaces/inner_kits/native_cpp/audio_source/include/: daudio_hdf_operate.h  daudio_ipc_callback.h  daudio_ipc_callback_stub.h  daudio_source_handler.h  daudio_source_proxy.h  idaudio_ipc_callback.h  idaudio_source.h  idistributed_hardware_source.h
interfaces/inner_kits/native_cpp/audio_source/src/: daudio_hdf_operate.cpp  daudio_ipc_callback.cpp  daudio_ipc_callback_stub.cpp  daudio_source_handler.cpp  daudio_source_load_callback.cpp  daudio_source_proxy.cpp
interfaces/inner_kits/native_cpp/test/fuzztest/: BUILD.gn
interfaces/inner_kits/native_cpp/test/unittest/: BUILD.gn
services/audioclient/: BUILD.gn
services/audioclient/interface/: imic_client.h  ispk_client.h
services/audioclient/micclient/include/: dmic_client.h
services/audioclient/micclient/src/: dmic_client.cpp
services/audioclient/spkclient/include/: dspeaker_client.h
services/audioclient/spkclient/src/: dspeaker_client.cpp
services/audioclient/test/unittest/: BUILD.gn
services/audioclient/test/unittest/micclient/: BUILD.gn
services/audioclient/test/unittest/spkclient/: BUILD.gn
services/audiocontrol/test/unittest/controlsink/: BUILD.gn
services/audiocontrol/test/unittest/controlsource/: BUILD.gn
services/audiohdiproxy/test/unittest/daudio_hdi_handler/: BUILD.gn
services/audiohdiproxy/test/unittest/daudio_manager_callback/: BUILD.gn
services/audiomanager/servicesink/: BUILD.gn
services/audiomanager/servicesink/include/: daudio_sink_hidumper.h  daudio_sink_ipc_callback_proxy.h  daudio_sink_service.h  daudio_sink_stub.h
services/audiomanager/servicesink/src/: daudio_sink_hidumper.cpp  daudio_sink_ipc_callback_proxy.cpp  daudio_sink_service.cpp  daudio_sink_stub.cpp
services/audiomanager/servicesource/: BUILD.gn
services/audiomanager/servicesource/include/: daudio_ipc_callback_proxy.h  daudio_source_service.h  daudio_source_stub.h
services/audiomanager/servicesource/src/: daudio_ipc_callback_proxy.cpp  daudio_source_service.cpp  daudio_source_stub.cpp
services/audiomanager/test/unittest/: BUILD.gn
services/audiomanager/test/unittest/managersink/: BUILD.gn
services/audiomanager/test/unittest/servicesink/: BUILD.gn
services/audiomanager/test/unittest/servicesource/: BUILD.gn
services/audiomanager/test/unittest/source_device/: BUILD.gn
services/audiomanager/test/unittest/sourcedevice/: BUILD.gn
services/audiomanager/test/unittest/sourcemanager/: BUILD.gn
services/audioprocessor/effectcomponent/: BUILD.gn
services/audiotransport/audiotransportstatus/: BUILD.gn
services/audiotransport/audiotransportstatus/src/: audio_transport_context.cpp  audio_transport_pause_status.cpp  audio_transport_start_status.cpp  audio_transport_stop_status.cpp
services/audiotransport/encodetransport/: BUILD.gn
services/audiotransport/encodetransport/include/: audio_encode_transport.h
services/audiotransport/encodetransport/src/: audio_encode_transport.cpp
services/audiotransport/receiverengine/: BUILD.gn
services/audiotransport/receiverengine/include/: av_receiver_engine_adapter.h  av_receiver_engine_transport.h
services/audiotransport/receiverengine/src/: av_receiver_engine_adapter.cpp  av_receiver_engine_transport.cpp
services/common/: BUILD.gn
services/common/audiodata/include/: audio_data.h
services/common/audiodata/src/: audio_data.cpp
services/common/audioparam/: audio_event.h  audio_param.h
services/common/taskProcessor/src/: task_queue.cpp
services/common/taskProcessor/test/unittest/: BUILD.gn
services/common/test/fuzztest/audiodatasetinit64_fuzzer/: BUILD.gn  audiodatasetinit64_fuzzer.cpp  audiodatasetinit64_fuzzer.h
services/hdfaudioclient/: BUILD.gn
services/hdfaudioclient/include/: audio_adapter.h  audio_attribute.h  audio_capture.h  audio_control.h  audio_manager.h  audio_render.h  audio_scene.h  audio_types.h  audio_volume.h  daudio_adapter_internal.h  daudio_attribute_internal.h  daudio_capture_internal.h  daudio_control_internal.h  daudio_param_callback_internal.h  daudio_render_callback_internal.h  daudio_render_internal.h  daudio_scene_internal.h  daudio_volume_internal.h  distributed_audio_client.h
services/hdfaudioclient/src/: daudio_adapter_internal.cpp  daudio_capture_internal.cpp  daudio_param_callback_internal.cpp  daudio_render_callback_internal.cpp  daudio_render_internal.cpp  distributed_audio_client.cpp
services/hdfaudioclient/test/unittest/: BUILD.gn  audio_manager_test.cpp
services/softbusadapter/: BUILD.gn
services/softbusadapter/src/: softbus_adapter.cpp
services/softbusadapter/test/unittest/: BUILD.gn
services/test_example/: BUILD.gn  distributedaudiotest.cpp  distributedaudiotest.h
(+437 files in other folders)
