# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

distributedaudio_ext_path =
    "//foundation/distributedhardware/distributed_audio_ext"
distributedaudio_path = "//foundation/distributedhardware/distributed_audio"
distributedhardwarefwk_path =
    "//foundation/distributedhardware/distributed_hardware_fwk"
mediastandard_path = "//foundation/multimedia/player_framework"
mediastandardfwk_path =
    "//foundation/multimedia/audio_framework/interfaces/inner_api/native"
audio_framework_path =
    "//foundation/multimedia/audio_framework/frameworks/native"
driver_audio_path = "//drivers/peripheral/audio/interfaces"

common_path = "${distributedaudio_path}/common"
services_path = "${distributedaudio_path}/services"
audio_client_path = "${services_path}/audioclient"
audio_control_path = "${services_path}/audiocontrol"
audio_hdi_proxy_path = "${services_path}/audiohdiproxy"
audio_processor_path = "${services_path}/audioprocessor"
audio_transport_path = "${services_path}/audiotransport"
interfaces_path = "${distributedaudio_path}/interfaces"
hdf_interfaces_path = "//drivers/interface/distributed_audio"
hdf_service_path = "//drivers/peripheral/distributed_audio"
hdf_ser_aud_path = "${hdf_service_path}/hdi_service/audio/v1_0"
hdf_ser_aud_ext_path = "${hdf_service_path}/hdi_service/audio_ext/v1_0"

fwk_utils_path = "${distributedhardwarefwk_path}/utils"
fwk_common_path = "${distributedhardwarefwk_path}/common"
fwk_services_path = "${distributedhardwarefwk_path}/services"
innerkits_path = "${distributedaudio_path}/interfaces/inner_kits"

distributedaudio_fuzz_path = "distributed_audio/distributed_audio"

build_flags = [ "-Werror" ]
