# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("../distributedaudio.gni")

ohos_shared_library("distributed_audio_handler") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    boundary_sanitize = true
    integer_overflow = true
    ubsan = true
  }
  stack_protector_ret = true
  include_dirs = [
    "//third_party/json/include",
    "${fwk_common_path}/utils/include",
    "${fwk_utils_path}/include",
    "${mediastandardfwk_path}/audiomanager/include",
    "${mediastandardfwk_path}/audiocommon/include",
    "${mediastandardfwk_path}/audiocapturer/include",
  ]

  include_dirs += [
    "include",
    "${common_path}/include",
    "${services_path}/common/audioparam",
  ]

  sources = [ "src/daudio_handler.cpp" ]

  deps = [ "${services_path}/common:distributed_audio_utils" ]

  external_deps = [
    "audio_framework:audio_capturer",
    "audio_framework:audio_client",
    "c_utils:utils",
    "distributed_hardware_fwk:distributedhardwareutils",
    "player_framework:media_client",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "LOG_DOMAIN=0xD004130",
  ]

  cflags = [ "-Wno-shadow" ]
  cflags_cc = cflags

  subsystem_name = "distributedhardware"

  part_name = "distributed_audio"
}
