# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("//drivers/hdf_core/adapter/uhdf2/uhdf.gni")
import("//drivers/peripheral/adapter/base/hidl_adapter.gni")
import(
    "//foundation/distributedhardware/distributed_audio/distributedaudio.gni")

ohos_executable("daudio_test_bin") {
  include_dirs = [
    "//foundation/multimedia/audio_framework/interfaces/inner_api/native/audiocommon/include",
    "//foundation/multimedia/audio_framework/frameworks/native/common/include",
    "//foundation/multinedia/audio_framework/interfaces/inner_api/native/audiocapturer/include",
    "${common_path}/include",
    "//drivers/peripheral/audio/interfaces/include",
  ]

  sources = [
    "audio_base.cpp",
    "audio_buffer.cpp",
    "cycle_test.cpp",
    "daudio_test_utils.cpp",
    "hdf_audio.cpp",
    "local_audio.cpp",
  ]

  deps = [ "${services_path}/common:distributed_audio_utils" ]

  external_deps = [
    "c_utils:utils",
    "hdf_core:libhdf_utils",
    "hiviewdfx_hilog_native:libhilog",
    "multimedia_audio_framework:audio_capturer",
    "multimedia_audio_framework:audio_client",
    "multimedia_audio_framework:audio_renderer",
  ]

  subsystem_name = "distributedhardware"
  part_name = "distributed_audio"
}
