# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("../../distributedaudio.gni")

config("daudio_common_pub_config") {
  include_dirs = [
    "audiodata/include",
    "audioeventcallback",
    "audioparam",
    "${common_path}/dfxutils/include",
    "${common_path}/include",
  ]
}

config("daudio_common_private_config") {
  include_dirs = [ "//third_party/json/include" ]

  include_dirs += [
    "taskProcessor/include",
    "${common_path}/include",
    "${common_path}/dfx_utils/include",
  ]
}

ohos_shared_library("distributed_audio_utils") {
  configs = [ ":daudio_common_private_config" ]

  public_configs = [ ":daudio_common_pub_config" ]

  sources = [
    "${common_path}/dfx_utils/src/daudio_hisysevent.cpp",
    "${common_path}/dfx_utils/src/daudio_hitrace.cpp",
    "${common_path}/src/daudio_latency_test.cpp",
    "${common_path}/src/daudio_log.cpp",
    "${common_path}/src/daudio_util.cpp",
    "audiodata/src/audio_data.cpp",
    "taskProcessor/src/task_impl.cpp",
    "taskProcessor/src/task_queue.cpp",
  ]

  external_deps = [
    "c_utils:utils",
    "dsoftbus:softbus_client",
    "hilog:libhilog",
    "hisysevent_native:libhisysevent",
    "hitrace_native:hitrace_meter",
    "init:libbegetutil",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "LOG_DOMAIN=0xD004100",
  ]

  subsystem_name = "distributedhardware"

  part_name = "distributed_audio"
}
