# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../distributedaudio.gni")

ohos_shared_library("daudio_client") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
    integer_overflow = true
    ubsan = true
  }
  stack_protector_ret = true
  include_dirs = [
    "./include",
    "${common_path}/include",
  ]

  sources = [
    "./src/daudio_adapter_internal.cpp",
    "./src/daudio_capture_internal.cpp",
    "./src/daudio_param_callback_internal.cpp",
    "./src/daudio_render_callback_internal.cpp",
    "./src/daudio_render_internal.cpp",
    "./src/distributed_audio_client.cpp",
  ]

  deps = [ "${services_path}/common:distributed_audio_utils" ]

  external_deps = [
    "c_utils:utils",
    "drivers_interface_distributed_audio:libdaudio_proxy_1.0",
    "hdf_core:libhdf_utils",
    "hilog:libhilog",
    "ipc:ipc_single",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "LOG_DOMAIN=0xD004130",
  ]

  subsystem_name = "distributedhardware"

  part_name = "distributed_audio"
}
