# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("../../distributedaudio.gni")

ohos_shared_library("distributed_audio_softbus_adapter") {
  include_dirs = [
    "//foundation/communication/dsoftbus/interfaces/kits/transport",
    "//foundation/communication/dsoftbus/interfaces/kits/common",
    "${fwk_common_path}/utils/include",
    "//third_party/json/include",
  ]

  include_dirs += [
    "${common_path}/include",
    "${services_path}/common/audioparam",
    "${services_path}/common/audiodata/include",
    "${softbusadapter_path}/include",
  ]

  sources = [
    "${services_path}/common/audiodata/src/audio_data.cpp",
    "src/softbus_adapter.cpp",
  ]

  deps = [ "${services_path}/common:distributed_audio_utils" ]

  external_deps = [
    "c_utils:utils",
    "dsoftbus:softbus_client",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "LOG_DOMAIN=0xD004100",
  ]

  subsystem_name = "distributedhardware"

  part_name = "distributed_audio"
}
