# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../distributedaudio.gni")

ohos_executable("audio_distributed_test") {
  include_dirs = [
    "./include",
    "${driver_audio_path}/include",
    "${hdf_service_path}/hdi_service/common/include",
    "${services_path}/hdfaudioclient/include",
  ]

  sources = [ "distributedaudiotest.cpp" ]

  deps = [ "${services_path}/hdfaudioclient:daudio_client" ]

  external_deps = [
    "c_utils:utils",
    "hdf_core:libhdf_utils",
    "hilog:libhilog",
  ]

  defines = [
    "DH_LOG_TAG=\"daudioTest\"",
    "HI_LOG_ENABLE",
    "LOG_DOMAIN=0xD004100",
  ]

  install_enable = false
  subsystem_name = "distributedhardware"
  part_name = "distributed_audio"
}
