# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../distributedaudio.gni")

ohos_executable("audio_distributed_test") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  include_dirs = [
    "./include",
    "${common_path}/include",
  ]

  sources = [ "distributedaudiotest.cpp" ]

  deps = [ "${services_path}/common:distributed_audio_utils" ]

  external_deps = [
    "cJSON:cjson",
    "c_utils:utils",
    "distributed_hardware_fwk:distributedhardwareutils",
    "drivers_interface_distributed_audio:libdaudio_proxy_1.0",
    "hdf_core:libhdf_utils",
    "hilog:libhilog",
  ]

  defines = [
    "DH_LOG_TAG=\"daudioTest\"",
    "HI_LOG_ENABLE",
    "LOG_DOMAIN=0xD004130",
  ]

  install_enable = false
  subsystem_name = "distributedhardware"
  part_name = "distributed_audio"
}
