# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../../../distributedaudio.gni")

module_out_path = "distributed_audio/audio_handler_test"

config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "${fwk_common_path}/utils/include",
    "${mediastandard_path}/interfaces/inner_api/native",
    "${mediastandard_path}/services/utils/include",
    "${mediastandardfwk_path}/audiocapturer/include",
    "${mediastandardfwk_path}/audiocommon/include",
    "${mediastandardfwk_path}/audiomanager/include",
  ]

  include_dirs += [
    "include",
    "${common_path}/include",
    "${distributedaudio_path}/audiohandler/include",
    "${services_path}/common/audioparam",
  ]
}

## UnitTest audio_handler_test
ohos_unittest("AudioHandlerTest") {
  module_out_path = module_out_path

  sources = [ "${distributedaudio_path}/audiohandler/test/unittest/src/daudio_handler_test.cpp" ]

  configs = [ ":module_private_config" ]

  deps = [
    "${distributedaudio_path}/audiohandler:distributed_audio_handler",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "audio_framework:audio_renderer",
    "cJSON:cjson",
    "c_utils:utils",
    "hilog:libhilog",
  ]
}

group("audio_handler_test") {
  testonly = true
  deps = [ ":AudioHandlerTest" ]
}
