# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("//build/test.gni")
import("../../../distributedaudio.gni")

module_output_path = "distributed_audio/common/daudio_util_test"

config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [ "${fwk_common_path}/utils/include" ]

  include_dirs += [
    "${common_path}/include",
    "include",
  ]
}

ohos_unittest("DaudioUtilsTest") {
  module_out_path = module_output_path

  sources = [ "src/daudio_utils_test.cpp" ]

  configs = [ ":module_private_config" ]

  deps = [
    "${services_path}/common:distributed_audio_utils",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "cJSON:cjson",
    "c_utils:utils",
    "hilog:libhilog",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "LOG_DOMAIN=0xD004130",
  ]
}

group("daudio_utils_test") {
  testonly = true
  deps = [ ":DaudioUtilsTest" ]
}
