# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("../../../distributedaudio.gni")

ohos_shared_library("distributed_audio_sink") {
  include_dirs = [
    "//third_party/json/include",
    "//third_party/cJSON",
    "${fwk_common_path}/utils/include",
  ]

  include_dirs += [
    "include",
    "${audio_client_path}/interface",
    "${audio_client_path}/micclient/include",
    "${audio_client_path}/spkclient/include",
    "${audio_control_path}/controlsink/include",
    "${audio_processor_path}/encodeprocessor/include",
    "${audio_processor_path}/decodeprocessor/include",
    "${audio_processor_path}/interface",
    "${audio_transport_path}/audiochannel/audiodatachannel/include",
    "${audio_transport_path}/audiochannel/interface",
    "${audio_transport_path}/audioctrltransport/include",
    "${audio_transport_path}/audioctrltransport/interface",
    "${audio_transport_path}/audiotransportstatus/include",
    "${audio_transport_path}/audiotransportstatus/interface",
    "${audio_transport_path}/decodetransport/include",
    "${audio_transport_path}/encodetransport/include",
    "${audio_transport_path}/interface",
    "${audio_transport_path}/receiverengine/include",
    "${audio_transport_path}/senderengine/include",
    "${common_path}/dfx_utils/include",
    "${common_path}/include",
    "${innerkits_path}/native_cpp/audio_sink/include",
    "${innerkits_path}/native_cpp/audio_source/include",
    "${services_path}/audiomanager/managersink/include",
    "${services_path}/common/audioeventcallback",
    "${services_path}/common/audiodata/include",
    "${services_path}/common/audioparam",
    "${softbusadapter_path}/include",
  ]

  if (distributed_audio_extension) {
    include_dirs += [
      "${distributedaudio_ext_path}/services/audioclient/directmicclient/include",
      "${distributedaudio_ext_path}/services/audioclient/directspkclient/include",
    ]
  }

  sources = [
    "${audio_client_path}/micclient/src/dmic_client.cpp",
    "${audio_client_path}/spkclient/src/dspeaker_client.cpp",
    "${audio_control_path}/controlsink/src/daudio_sink_dev_ctrl_manager.cpp",
    "${innerkits_path}/native_cpp/audio_sink/src/daudio_sink_handler.cpp",
    "${innerkits_path}/native_cpp/audio_sink/src/daudio_sink_load_callback.cpp",
    "${innerkits_path}/native_cpp/audio_sink/src/daudio_sink_proxy.cpp",
    "${innerkits_path}/native_cpp/audio_source/src/daudio_source_proxy.cpp",
    "${services_path}/audiomanager/managersink/src/daudio_sink_dev.cpp",
    "${services_path}/audiomanager/managersink/src/daudio_sink_manager.cpp",
    "src/daudio_sink_hidumper.cpp",
    "src/daudio_sink_service.cpp",
    "src/daudio_sink_stub.cpp",
  ]

  if (distributed_audio_extension) {
    sources += [
      "${distributedaudio_ext_path}/services/audioclient/directmicclient/src/direct_dmic_client.cpp",
      "${distributedaudio_ext_path}/services/audioclient/directspkclient/src/direct_dspeaker_client.cpp",
    ]
  }

  deps = [
    "${audio_transport_path}/decodetransport:distributed_audio_decode_transport",
    "${audio_transport_path}/encodetransport:distributed_audio_encode_transport",
    "${services_path}/common:distributed_audio_utils",
    "//third_party/cJSON:cjson",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "audio_framework:audio_capturer",
    "audio_framework:audio_client",
    "audio_framework:audio_renderer",
    "c_utils:utils",
    "distributed_hardware_fwk:distributed_av_receiver",
    "distributed_hardware_fwk:distributed_av_sender",
    "distributed_hardware_fwk:libdhfwk_sdk",
    "drivers_interface_audio:libaudio_proxy_1.0",
    "dsoftbus:softbus_client",
    "eventhandler:libeventhandler",
    "hdf_core:libhdf_ipc_adapter",
    "hdf_core:libhdi",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  if (distributed_audio_extension) {
    cflags = [ "-DDAUDIO_SUPPORT_DIRECT" ]
  }

  defines = [
    "HI_LOG_ENABLE",
    "LOG_DOMAIN=0xD004100",
  ]

  if (build_variant == "root") {
    defines += [
      "DUMP_DMICCLIENT_FILE",
      "DUMP_DSPEAKERCLIENT_FILE",
    ]
  }

  subsystem_name = "distributedhardware"

  part_name = "distributed_audio"
}
